sample/error/e02901-ii.asn
E02901-II DEFINITIONS ::=
BEGIN
    Int ::= item < CHOICE { -- E02901-II
        a   INTEGER,
        b   REAL,
        c   NULL
    }
END
